http-servlet-server: added logging

--- a/http-servlet-server/pom.xml
+++ b/http-servlet-server/pom.xml
@@ -16,6 +16,7 @@
         <mainClass>com.fedorizvekov.http.servlet.server.HttpServletServer</mainClass>
 
         <jetty-server.version>9.3.11.v20160721</jetty-server.version>
+        <logback.version>1.1.7</logback.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
     </properties>
@@ -31,7 +32,11 @@
             <artifactId>jetty-webapp</artifactId>
             <version>${jetty-server.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
