--- a/http-servlet-server/pom.xml
+++ b/http-servlet-server/pom.xml
@@ -16,6 +16,7 @@
         <mainClass>com.fedorizvekov.http.servlet.server.HttpServletServer</mainClass>
 
         <jetty-server.version>9.3.11.v20160721</jetty-server.version>
+        <jackson-databind.version>2.8.1</jackson-databind.version>
         <logback.version>1.1.7</logback.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
@@ -31,6 +32,11 @@
             <groupId>org.eclipse.jetty</groupId>
             <artifactId>jetty-webapp</artifactId>
             <version>${jetty-server.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
