--- a/http-servlet-server/pom.xml
+++ b/http-servlet-server/pom.xml
@@ -17,6 +17,7 @@
 
         <jetty-server.version>9.3.11.v20160721</jetty-server.version>
         <jackson-databind.version>2.8.1</jackson-databind.version>
+        <lombok.version>1.16.10</lombok.version>
         <logback.version>1.1.7</logback.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
@@ -37,6 +38,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-databind.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
