--- a/websocket-servlet-server/pom.xml
+++ b/websocket-servlet-server/pom.xml
@@ -18,6 +18,9 @@
         <jetty-server.version>9.3.11.v20160721</jetty-server.version>
         <lombok.version>1.16.10</lombok.version>
         <logback.version>1.1.7</logback.version>
+        <junit.version>4.12</junit.version>
+        <mockito-core.version>2.7.5</mockito-core.version>
+        <assertj-core.version>3.6.2</assertj-core.version>
         <maven-compiler-plugin.version>3.5.1</maven-compiler-plugin.version>
         <maven-assembly-plugin.version>2.6</maven-assembly-plugin.version>
     </properties>
@@ -53,6 +56,24 @@
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
